--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -1,6 +1,6 @@
 [Desktop Entry]
 Encoding=UTF-8
-Name=Pyramidal Sharepening Filter
+Name=Pyramidal Sharpening Filter
 Comment=Sharpen an image using a pyramidal approach
 ServiceTypes=Krita/Filter
 Type=Service
