SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@862946 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -1,7 +1,31 @@
 [Desktop Entry]
 Encoding=UTF-8
 Name=Pyramidal Sharpening Filter
+Name[el]=Φίλτρο πυραμιδοειδούς όξυνσης
+Name[es]=Filtro de enfocado piramidal
+Name[et]=Püramiidteravdamise filter
+Name[fr]=Filtre de nettoyage pyramidal
+Name[ga]=Scagaire Géaraithe Pirimidiúil
+Name[gl]=Filtro de focalización piramidal
+Name[km]=តម្រង​ធ្វើ​ឲ្យ​ពីរ៉ាមីត​ច្បាស់
+Name[pt]=Filtro de Afiamento Piramidal
+Name[pt_BR]=Filtro de Nitidez Piramidal
+Name[sv]=Pyramidalt skärpefilter
+Name[uk]=Фільтр пірамідального збільшення різкості
+Name[x-test]=xxPyramidal Sharpening Filterxx
 Comment=Sharpen an image using a pyramidal approach
+Comment[el]=Όξυνση μιας εικόνας χρησιμοποιώντας πυραμιδοειδή προσέγγιση
+Comment[es]=Enfoca una imagen utilizando una aproximación piramidal
+Comment[et]=Pildi teravdamine püramidaalselt
+Comment[fr]=Nettoyer une image utilisant une approche pyramidale
+Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil
+Comment[gl]=Afía unha imaxe mediante unha aproximación piramidal
+Comment[km]=ធ្វើ​ឲ្យ​រូបភាព​ច្បាស់​ដោយ​ប្រើ​ពីរ៉ាមីត
+Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal
+Comment[pt_BR]=Aumenta a nitidez de uma imagem usando uma abordagem piramidal
+Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt
+Comment[uk]=Збільшити різкість за допомогою пірамідального підходу
+Comment[x-test]=xxSharpen an image using a pyramidal approachxx
 ServiceTypes=Krita/Filter
 Type=Service
 X-KDE-Library=kritaPyramidalSharpening
