SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@900718 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -9,6 +9,7 @@ Name[ga]=Scagaire Géaraithe Pirimidiúil
 Name[gl]=Filtro de focalización piramidal
 Name[km]=តម្រង​ធ្វើ​ឲ្យ​ពីរ៉ាមីត​ច្បាស់
 Name[nds]=Pyramiedsch Scharpde-Filter
+Name[nl]=Piramidevormig verscherpingsfilter
 Name[pt]=Filtro de Afiamento Piramidal
 Name[pt_BR]=Filtro de Nitidez Piramidal
 Name[sv]=Pyramidalt skärpefilter
@@ -23,6 +24,7 @@ Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil
 Comment[gl]=Afía unha imaxe mediante unha aproximación piramidal
 Comment[km]=ធ្វើ​ឲ្យ​រូបភាព​ច្បាស់​ដោយ​ប្រើ​ពីរ៉ាមីត
 Comment[nds]=En Bild mit en Pyramiden-Metood scharper maken
+Comment[nl]=Verscherp een afbeelding door een piramidevormige benadering
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal
 Comment[pt_BR]=Aumenta a nitidez de uma imagem usando uma abordagem piramidal
 Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt
