--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -13,6 +13,7 @@ Name[nl]=Piramidevormig verscherpingsfilter
 Name[pt]=Filtro de Afiamento Piramidal
 Name[pt_BR]=Filtro de Nitidez Piramidal
 Name[sv]=Pyramidalt skärpefilter
+Name[tr]=Pramidal Bileme Süzgeci
 Name[uk]=Фільтр пірамідального збільшення різкості
 Name[x-test]=xxPyramidal Sharpening Filterxx
 Comment=Sharpen an image using a pyramidal approach
@@ -28,6 +29,7 @@ Comment[nl]=Verscherp een afbeelding door een piramidevormige benadering
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal
 Comment[pt_BR]=Aumenta a nitidez de uma imagem usando uma abordagem piramidal
 Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt
+Comment[tr]=Pramidal bir yaklaşım kullanarak bir resmi biler
 Comment[uk]=Збільшити різкість за допомогою пірамідального підходу
 Comment[x-test]=xxSharpen an image using a pyramidal approachxx
 ServiceTypes=Krita/Filter
