--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -16,7 +16,7 @@ Name[sv]=Pyramidalt skärpefilter
 Name[tr]=Pramidal Bileme Süzgeci
 Name[uk]=Фільтр пірамідального збільшення різкості
 Name[x-test]=xxPyramidal Sharpening Filterxx
-Comment=Sharpen an image using a pyramidal approach
+Comment=Sharpen an image using a pyramidal approach.
 Comment[el]=Όξυνση μιας εικόνας χρησιμοποιώντας πυραμιδοειδή προσέγγιση
 Comment[es]=Enfoca una imagen utilizando una aproximación piramidal
 Comment[et]=Pildi teravdamine püramidaalselt
