SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@946915 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -17,6 +17,9 @@ Name[tr]=Pramidal Bileme Süzgeci
 Name[uk]=Фільтр пірамідального збільшення різкості
 Name[x-test]=xxPyramidal Sharpening Filterxx
 Comment=Sharpen an image using a pyramidal approach.
+Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
+Comment[pt_BR]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
+Comment[uk]=Збільшити різкість за допомогою пірамідального підходу.
 ServiceTypes=Krita/Filter
 Type=Service
 X-KDE-Library=kritaPyramidalSharpening
