--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -20,7 +20,9 @@ Comment=Sharpen an image using a pyramidal approach.
 Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil.
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[pt_BR]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
+Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt.
 Comment[uk]=Збільшити різкість за допомогою пірамідального підходу.
+Comment[x-test]=xxSharpen an image using a pyramidal approach.xx
 ServiceTypes=Krita/Filter
 Type=Service
 X-KDE-Library=kritaPyramidalSharpening
