--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -17,6 +17,7 @@ Name[tr]=Pramidal Bileme Süzgeci
 Name[uk]=Фільтр пірамідального збільшення різкості
 Name[x-test]=xxPyramidal Sharpening Filterxx
 Comment=Sharpen an image using a pyramidal approach.
+Comment[et]=Pildi teravdamine püramidaalselt.
 Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil.
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[pt_BR]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
