SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@954480 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -18,6 +18,7 @@ Name[uk]=Фільтр пірамідального збільшення різк
 Name[x-test]=xxPyramidal Sharpening Filterxx
 Comment=Sharpen an image using a pyramidal approach.
 Comment[et]=Pildi teravdamine püramidaalselt.
+Comment[fr]=Nettoyer une image utilisant une approche pyramidale
 Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil.
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[pt_BR]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
