SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@966655 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -17,6 +17,7 @@ Name[tr]=Pramidal Bileme Süzgeci
 Name[uk]=Фільтр пірамідального збільшення різкості
 Name[x-test]=xxPyramidal Sharpening Filterxx
 Comment=Sharpen an image using a pyramidal approach.
+Comment[es]=Enfoca una imagen utilizando una aproximación piramidal.
 Comment[et]=Pildi teravdamine püramidaalselt.
 Comment[fr]=Nettoyer une image utilisant une approche pyramidale
 Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil.
