SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@974490 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -21,6 +21,7 @@ Comment[es]=Enfoca una imagen utilizando una aproximación piramidal.
 Comment[et]=Pildi teravdamine püramidaalselt.
 Comment[fr]=Nettoyer une image utilisant une approche pyramidale
 Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil.
+Comment[km]=ធ្វើ​ឲ្យ​រូបភាព​ច្បាស់​ដោយ​ប្រើ​គោលវិធី​​ពីរ៉ាមីត ។
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[pt_BR]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt.
