SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@1024817 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -2,6 +2,7 @@
 Encoding=UTF-8
 Name=Pyramidal Sharpening Filter
 Name[el]=Φίλτρο πυραμιδοειδούς όξυνσης
+Name[en_GB]=Pyramidal Sharpening Filter
 Name[es]=Filtro de enfocado piramidal
 Name[et]=Püramiidteravdamise filter
 Name[fr]=Filtre de nettoyage pyramidal
@@ -17,13 +18,13 @@ Name[tr]=Pramidal Bileme Süzgeci
 Name[uk]=Фільтр пірамідального збільшення різкості
 Name[x-test]=xxPyramidal Sharpening Filterxx
 Comment=Sharpen an image using a pyramidal approach.
+Comment[en_GB]=Sharpen an image using a pyramidal approach.
 Comment[es]=Enfoca una imagen utilizando una aproximación piramidal.
 Comment[et]=Pildi teravdamine püramidaalselt.
 Comment[fr]=Nettoyer une image utilisant une approche pyramidale
 Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil.
 Comment[km]=ធ្វើ​ឲ្យ​រូបភាព​ច្បាស់​ដោយ​ប្រើ​គោលវិធី​​ពីរ៉ាមីត ។
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
-Comment[pt_BR]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt.
 Comment[tr]=Pramidal bir yaklaşım kullanarak bir resmi keskinleştir.
 Comment[uk]=Збільшити різкість за допомогою пірамідального підходу.
