SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@1037937 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -8,6 +8,7 @@ Name[et]=Püramiidteravdamise filter
 Name[fr]=Filtre de nettoyage pyramidal
 Name[ga]=Scagaire Géaraithe Pirimidiúil
 Name[gl]=Filtro de focalización piramidal
+Name[it]=Filtro nitidezza piramidale
 Name[km]=តម្រង​ធ្វើ​ឲ្យ​ពីរ៉ាមីត​ច្បាស់
 Name[nds]=Pyramiedsch Scharpde-Filter
 Name[nl]=Piramidevormig verscherpingsfilter
@@ -23,6 +24,7 @@ Comment[es]=Enfoca una imagen utilizando una aproximación piramidal.
 Comment[et]=Pildi teravdamine püramidaalselt.
 Comment[fr]=Nettoyer une image utilisant une approche pyramidale
 Comment[ga]=Géaraigh íomhá le cur chuige pirimidiúil.
+Comment[it]=Aumenta la nitidezza di un'immagine mediante un approccio piramidale.
 Comment[km]=ធ្វើ​ឲ្យ​រូបភាព​ច្បាស់​ដោយ​ប្រើ​គោលវិធី​​ពីរ៉ាមីត ។
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt.
