SVN_SILENT made messages (.desktop file)
git-svn-id: https://svn.kde.org/home/kde/trunk/playground/graphics/krita-plugins/filters/PyramidalSharpening@1079986 283d02a7-25f6-0310-bc7c-ecb5cbfe19da

--- a/kritaPyramidalSharpening.desktop
+++ b/kritaPyramidalSharpening.desktop
@@ -28,6 +28,7 @@ Comment[it]=Aumenta la nitidezza di un'immagine mediante un approccio piramidale
 Comment[km]=ធ្វើ​ឲ្យ​រូបភាព​ច្បាស់​ដោយ​ប្រើ​គោលវិធី​​ពីរ៉ាមីត ។
 Comment[nl]=Verscherp een afbeelding door een piramidevormige benadering.
 Comment[pt]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
+Comment[pt_BR]=Aumenta o detalhe de uma imagem com uma abordagem piramidal.
 Comment[sv]=Gör en bild skarpare med ett pyramidalt tillvägagångssätt.
 Comment[tr]=Pramidal bir yaklaşım kullanarak bir resmi keskinleştir.
 Comment[uk]=Збільшити різкість за допомогою пірамідального підходу.
